--- a/apiFitness/src/main/resources/application.properties
+++ b/apiFitness/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.datasource.url=jdbc:mysql://localhost:3306/db_apifitness?useTimezone=true&serverTimezone=UTC
-spring.datasource.username=pedro
-spring.datasource.password=PC140497
+spring.datasource.username=root
+spring.datasource.password=Macaco123%
+jwt.secret=secret
