Criação das entidades e dos repositorios

--- a/apiFitness/src/main/resources/application.properties
+++ b/apiFitness/src/main/resources/application.properties
@@ -4,3 +4,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/db_apifitness?useTimezone=true
 spring.datasource.username=root
 spring.datasource.password=Macaco123%
 jwt.secret=secret
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+
