--- a/apiFitness/src/main/resources/application.properties
+++ b/apiFitness/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.datasource.url=jdbc:mysql://localhost:3306/db_apifitness?useTimezone=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=Macaco123%
+spring.datasource.password=PC140497
 jwt.secret=secret
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
