--- a/apiFitness/src/main/resources/application.properties
+++ b/apiFitness/src/main/resources/application.properties
@@ -7,5 +7,5 @@ jwt.secret=secret
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
+spring.jackson.serialization.fail-on-empty-beans=false
 
