--- a/apiFitness/src/main/resources/application.properties
+++ b/apiFitness/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.datasource.url=jdbc:mysql://localhost:3306/db_apifitness?useTimezone=true&serverTimezone=UTC
-spring.datasource.username=root
+spring.datasource.username=pedro
 spring.datasource.password=PC140497
 jwt.secret=secret
 spring.jpa.generate-ddl=true
